# ppk

./: .gitignore  LICENSE  MANIFEST.in  README.md  all-main-services-with-log.sh  all-main-services.sh  all-with-workers.sh  http-file-server.sh  korz.sh  main.node.sh  manager.sh  package-lock.json  package.json  promises.sh  pusha.sh  pyproject.toml  record-mode.sh  replay-mode.sh  repr-ws.sh  runner-1.sh  runner-and-pusha-dbg.sh  runner-and-pusha.sh  runner-dbg-4.sh  runner.sh  setup.py  visual-monitor.sh  web.sh
bin-umt/: !all-services-with-tunnel.sh  !ssh-umt-tunnel.sh  pusha.sh  run-pr-gpu-x4.sh  run-pr-gpu-x8.sh  run-pr.sh  runner-1.sh  umt-show-my-tasks.sh  umt-start-pr-task-dbg.sh  umt-start-pr-task-gpu-a100.sh  umt-start-pr-task-gpu-bash.sh  umt-start-pr-task-gpu-dbg.sh  umt-start-pr-task-gpu.sh  umt-start-pr-task.sh
client-api/cpp/: README.md  make.sh  mongoose.c  mongoose.h  ppk.h  py-recv.py  py-send.py  test-recv.cpp  test-send.cpp
client-api/cpp-asio/: README.md  make.sh  test.cpp
client-api/cpp-local-channels/: channels.h  make.sh  test-channels.cpp
client-api/js/: __init__.py  api-lib.js  cells.js  cl2.js  client-api.js  gr4.js  gr5.js  graph.js  local.js  payloads-inmem.js  payloads.js  promises-client.js  query-tcp.js  repr-ws-client-api.js  req.js  slurm.js  starter.js
client-api/python/: __init__.py  deploy-pth-312.sh  deploy-pth.sh  design.txt  install-from-github.sh  local_channel.py  ppk.pth  ppk.py  ppk_cells.py  ppk_web.py  (+14 more)
dev-docs/: ideas.md
develop/: cpp-find.md  design-decisions.md  diffs-p.md  feature-map.md  features.md  ideas.md  notes.md  open-questions.md  optimize.md  others.md  todo.md  unfat.md
doc/: howto-add-service-test.txt
lib/: http-proxy.js
main/: lm.js  main.js  main.js-
main.py/: README.md  main.py
(+514 files in other folders)
