[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name="ppk"
version = "2026.06"
dependencies = [
'websockets',
'numpy',
'aiofiles',
'cloudpickle',
'aiohttp',
'aiohttp_socks',
'psutil'
]

[tool.setuptools]
packages = ["ppk", "ppk.js", "ppk.genesis", "ppk.http_bridge", "ppk.main","ppk.utils","ppk.web","ppk.ws_repr"]

[tool.setuptools.package-dir]
"ppk"="client-api/python"
"ppk.js"="client-api/js"
"ppk.genesis"="client-api/python/genesis"
"ppk.http_bridge"="client-api/python/genesis"
"ppk.main"="client-api/python/main"
"ppk.utils"="client-api/python/utils"
"ppk.web"="client-api/python/web"
"ppk.ws_repr"="client-api/python/ws_repr"
