[build-system]
#requires = ["setuptools == 82.0.1", "wheel", "setuptools-scm"]
requires = ["setuptools == 80.9.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name="ppk"
version = "2026.06"
dependencies = [
'websockets',
'numpy',
'aiofiles',
'cloudpickle',
'aiohttp',
'aiohttp_socks',
'psutil'
]

[tool.setuptools]
packages = ["ppk", "ppk.js"]

[tool.setuptools.package-dir]
"ppk"="client-api/python"
"ppk.js"="client-api/js"
