[build-system]
#requires = ["setuptools", "wheel", "setuptools-scm"]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name="ppk"
version = "2026.06"
dependencies = [
'websockets',
'numpy',
'aiofiles',
'cloudpickle',
'aiohttp',
'aiohttp_socks',
'psutil'
]

[tool.setuptools]
packages = ["ppk", "ppk.js"]
include-package-data = true

[tool.setuptools.package-dir]
"ppk"="client-api/python"
"ppk.js"="client-api/js"
